# chatbot-prototype

./: .gitignore  Chatbot.py  requirements.txt
api/: .dockerignore  .env  Dockerfile  langgraph.json  pyproject.toml
api/data/: Bệnh viện 108.csv  Bệnh viện Chợ Rẫy.csv  Bệnh viện Thẩm mỹ Thảo Điền.csv  Bệnh viện Thẩm mỹ Việt Mỹ .csv  Bệnh viện Xanh Pôn.csv  Bệnh viện thẩm mỹ Đông Á.csv  Bệnh viện Đại học Y Dược TPHCM - Khoa tạo hình thẩm mỹ.csv  Kangnam.csv  Khoa Phẫu thuật tạo hình thẩm mỹ - Bệnh viện Bạch Mai.csv  Thẩm mỹ Bệnh viện Hồng Ngọc.csv  Thẩm mỹ viện Dr.Hải Lê.csv  Thẩm mỹ viện Hoàng Tuấn.csv  Việt Đức + Thu Cúc.csv  combined_data.csv
api/notebooks/: 001-data-preparation.ipynb  002-data-ingestion.ipynb
api/notebooks/.streamlit/: secrets.toml
api/scripts/: hf_model_download.py
api/src/: config.py  utils.py
api/src/app/: __init__.py  long_term_memory.py
api/src/app/agent/: __init__.py  generate_response.py  reset_conversation.py
api/src/app/agent/workflow/: __init__.py  chains.py  edges.py  nodes.py
api/src/app/agent/workflow/tools/: __init__.py  base.py  clinic.py  memory.py
api/src/app/data/: deduplicate_documents.py
api/src/app/rag/: knowledge_graph.py  retrieval.py  splitter.py
api/src/domain/: extractor.py  prompts.py
api/src/infastructure/: api.py  opik_utils.py
api/src/infastructure/mogo/: client.py
data/: Bệnh Viện Thẩm Mỹ AVA.csv  Bệnh viện 108.csv  Bệnh viện Chợ Rẫy.csv  Bệnh viện Thẩm Mỹ Sài Gòn.csv  Bệnh viện Thẩm mỹ GangWhoo.csv  Bệnh viện Thẩm mỹ JK Nhật Hàn.csv  Bệnh viện Thẩm mỹ Ngô Mộng Hùng .csv  Kangnam.csv  (+17 more)
(+62 files in other folders)
